--- a/css/modules/_colors.scss
+++ b/css/modules/_colors.scss
@@ -1,10 +1,7 @@
-$color1: #FFCAD4;
-$color2: #9BD1F7;
-// $color3: ;
-$color4: #ACF39D;
+$pink: #FFCAD4;
+$blue: #9BD1F7;
+$green: #ACF39D;
 
-$color6: #F9F7F9;
-$color7: #D8D6D8;
-$color8: #929092;
-$color9: #484648;
-$color10: #171717;
+$white: #F9F7F9;
+$gray: #929092;
+$black: #171717;
