--- a/css/partials/_nav.scss
+++ b/css/partials/_nav.scss
@@ -21,7 +21,7 @@
       @include ease_out(all);
 
       .top,.mid,.bottom {
-        background-color: $color10;
+        background-color: $black;
         position: absolute;
         width: 100%;
         height: 20%;
@@ -68,7 +68,7 @@
 .overlay {
   opacity: 0;
   z-index: -1;
-  background-color: $color8;
+  background-color: $gray;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -77,8 +77,9 @@
   @include ease_out(all);
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   .nav {
     width: 100%;
@@ -154,19 +155,19 @@
 }
 
 .home_color {
-  background-color: $color2 !important;
+  background-color: $blue !important;
 }
 
 .about_color {
-  background-color: $color1 !important;
+  background-color: $pink !important;
 }
 
 .projects_color {
-  background-color: $color4 !important;
+  background-color: $green !important;
 }
 
 .resume_color {
-  background-color: $color6 !important;
+  background-color: $white !important;
 }
 
 @media (min-width: $large) {
