--- a/css/modules/_colors.scss
+++ b/css/modules/_colors.scss
@@ -1,6 +1,6 @@
-$pink: #FFCAD4;
-$blue: #9BD1F7;
-$green: #ACF39D;
+$pink: #F4D2EA;
+$blue: #ADD3F4;
+$green: #A2E8CC;
 
 $white: #F9F7F9;
 $gray: #929092;
